--- a/index.html
+++ b/index.html
@@ -20,45 +20,18 @@
         body { font-family: 'Pyidaungsu', sans-serif; padding-bottom: 110px; background-color: #f8f5ff; }
         .page { display: none; opacity: 0; }
         .active-page { display: block; opacity: 1; transition: opacity 0.3s; }
-        
-        /* Layout Gradients */
         .gold-gradient { background: linear-gradient(135deg, #D4AF37 0%, #FFD700 50%, #B8860B 100%); }
         .purple-gradient { background: linear-gradient(135deg, #37006a 0%, #5e0a9e 100%); }
         .viber-bg { background-color: #7360f2; }
         .telegram-bg { background-color: #229ED9; }
 
-        /* Blog Style Content Formatting */
-        .post-content { 
-            white-space: pre-wrap; /* Enter ခေါက်ထားတာတွေကို အမှန်အတိုင်းပြမယ် */
-            line-height: 1.8; 
-            word-break: break-word;
-        }
+        /* Blog Style Text Format */
+        .post-content { white-space: pre-wrap; line-height: 1.8; word-break: break-word; }
 
-        /* Improved Gallery Style (Show Full Image) */
-        .gallery-scroll { 
-            display: flex; 
-            overflow-x: auto; 
-            gap: 12px; 
-            padding: 5px;
-            scroll-snap-type: x mandatory; 
-        }
-        .gallery-item { 
-            flex: 0 0 100%; /* တပုံချင်းစီ အပြည့်ပြမယ် */
-            scroll-snap-align: center; 
-            height: 300px;
-            background: #eee;
-            border-radius: 16px;
-            overflow: hidden;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        .gallery-item img {
-            width: 100%;
-            height: 100%;
-            object-fit: contain; /* ပုံမပျက်ဘဲ အပြည့်ပေါ်စေမယ် */
-            background: #000; /* ပုံမပြည့်တဲ့နေရာကို အမည်းရောင်ပြမယ် */
-        }
+        /* Full Image Gallery */
+        .gallery-scroll { display: flex; overflow-x: auto; gap: 12px; padding: 5px; scroll-snap-type: x mandatory; }
+        .gallery-item { flex: 0 0 100%; scroll-snap-align: center; height: 300px; background: #000; border-radius: 16px; overflow: hidden; display: flex; align-items: center; justify-content: center; }
+        .gallery-item img { width: 100%; height: 100%; object-fit: contain; }
 
         .no-scrollbar::-webkit-scrollbar { display: none; }
         .no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
@@ -74,7 +47,7 @@
             <span id="timeClock" class="font-bold text-white">00:00</span>
         </div>
         <div class="flex items-center gap-3 p-3">
-            <img src="CDST_Logo.png" alt="Logo" class="w-10 h-10 rounded-lg border border-[#FFD700] shadow-sm bg-[#37006a]" onerror="this.style.display='none'">
+            <img src="CDST_Logo.png" alt="Logo" class="w-10 h-10 rounded-lg border border-[#FFD700] shadow-sm object-cover bg-[#37006a]" onerror="this.style.display='none'">
             <div class="text-left leading-tight">
                 <h1 class="text-lg font-bold tracking-wider text-white">Cherry Directory</h1>
                 <div class="flex items-center text-[9px] text-gray-300 gap-2">
@@ -119,7 +92,7 @@
         <section id="detailPage" class="fixed inset-0 bg-[#f8f5ff] z-[100] overflow-y-auto hidden">
             <div class="sticky top-0 bg-white/95 backdrop-blur-md p-3 shadow-sm z-50 flex items-center border-b border-gray-200">
                 <button onclick="closeDetail()" class="w-9 h-9 rounded-full bg-gray-100 text-[#4B0082] flex items-center justify-center hover:bg-[#D4AF37] hover:text-white"><i class="fa fa-arrow-left"></i></button>
-                <span class="ml-3 font-bold text-[#4B0082] truncate text-sm" id="detailHeader">Post Details</span>
+                <span class="ml-3 font-bold text-[#4B0082] truncate text-sm" id="detailHeader">Details</span>
             </div>
             <div id="detailContent" class="p-5 max-w-2xl mx-auto pb-24"></div>
         </section>
@@ -179,14 +152,12 @@
             const cEvents = localStorage.getItem('cache_events');
             const cDir = localStorage.getItem('cache_dir');
             const cAdmin = localStorage.getItem('cache_admin');
-
             if(cEvents) { eventsData = JSON.parse(cEvents); setupFilters('eventFilters', eventsData, (c) => { activeEventCat = c; renderEvents(); }); renderEvents(); }
             if(cDir) { dirData = JSON.parse(cDir); setupFilters('dirFilters', dirData, (c) => { activeDirCat = c; handleSearch(); }); renderDirectory(); }
             if(cAdmin) { renderAdminArea(JSON.parse(cAdmin)); }
 
             const ns = 'cherry-directory-' + SHEET_ID.substr(0,5);
             fetch(`https://api.countapi.xyz/hit/${ns}/visits`).then(res => res.json()).then(data => { document.getElementById('viewCounter').innerText = data.value || '1.2K'; }).catch(() => { document.getElementById('viewCounter').innerText = '1.2K'; });
-
             fetchEvents(); fetchDirectory(); fetchAdmin();
         }
 
@@ -196,7 +167,7 @@
                 const text = await res.text();
                 const json = JSON.parse(text.substr(47).slice(0, -2));
                 eventsData = json.table.rows.map(r => ({ cat: r.c[0]?.v, title: r.c[1]?.v, desc: r.c[2]?.v, fromDate: r.c[3]?.v, toDate: r.c[4]?.v, time: r.c[5]?.v, place: r.c[6]?.v, org: r.c[7]?.v, logo: r.c[8]?.v, images: [r.c[9]?.v, r.c[10]?.v, r.c[11]?.v, r.c[12]?.v, r.c[13]?.v].filter(Boolean) }))
-                .filter(i => i.title && i.title !== "Title").reverse(); 
+                .filter(i => i.title && i.title !== "Title").reverse();
                 localStorage.setItem('cache_events', JSON.stringify(eventsData));
                 setupFilters('eventFilters', eventsData, (c) => { activeEventCat = c; renderEvents(); });
                 renderEvents();
@@ -277,7 +248,7 @@
             list.innerHTML = Object.keys(groups).map(cat => `
                 <div class="mb-4"><h3 class="font-bold text-[#D4AF37] text-[10px] uppercase tracking-widest mb-2 border-l-4 border-[#D4AF37] pl-2">${cat}</h3>
                 <div class="space-y-3">${groups[cat].map(i => `
-                    <div onclick="openDetail('event', ${eventsData.indexOf(i)})" class="bg-white rounded-xl shadow-sm p-3 flex gap-3 cursor-pointer active:scale-95 transition-transform"><img src="${fixDriveLink(i.images[0] || i.logo)}" class="w-20 h-20 rounded-lg object-cover bg-gray-100" onerror="this.src='CDST_Logo.png'"><div class="flex-1 flex flex-col justify-center"><h4 class="font-bold text-[#4B0082] text-sm leading-tight">${i.title}</h4><p class="text-[10px] text-gray-500 mt-1 line-clamp-2">${i.desc || ''}</p></div></div>`).join('')}</div></div>`).join('');
+                    <div onclick="openDetail('event', ${eventsData.indexOf(i)})" class="bg-white rounded-xl shadow-sm p-3 flex gap-3 cursor-pointer active:scale-95 transition-transform"><img src="${fixDriveLink(i.images[0] || i.logo)}" class="w-20 h-20 rounded-lg object-cover bg-gray-100" onerror="this.src='CDST_Logo.png'"><div class="flex-1 flex flex-col justify-center"><h4 class="font-bold text-[#4B0082] text-sm leading-tight break-words">${i.title}</h4><p class="text-[10px] text-gray-500 mt-1 line-clamp-2">${i.desc || ''}</p></div></div>`).join('')}</div></div>`).join('');
         }
 
         function renderDirectory() {
@@ -296,29 +267,17 @@
 
         function openDetail(type, index) {
             const modal = document.getElementById('detailPage'); const content = document.getElementById('detailContent');
-            const rR = (l, v) => `<div class="border-b border-gray-100 py-3"><p class="text-[10px] text-gray-400 mb-0.5">${l}</p><div class="text-gray-800 font-medium text-sm post-content">${v || '-'}</div></div>`;
-            const rP = (l, v) => v ? `<div class="border-b border-gray-100 py-3 flex justify-between items-center"><div><p class="text-[10px] text-gray-400 mb-0.5">${l}</p><p class="text-[#4B0082] font-bold text-sm font-mono">${v}</p></div><a href="tel:${v}" class="bg-green-500 text-white px-3 py-1.5 rounded-lg text-[10px] font-bold shadow-sm"><i class="fa fa-phone"></i> CALL</a></div>` : '';
-            const rC = (l, v, i, c, lp) => `<div class="border-b border-gray-100 py-3 flex justify-between items-center"><div class="flex items-center gap-3"><div class="w-8 h-8 rounded-full bg-gray-100 flex items-center justify-center text-gray-400"><i class="${i}"></i></div><div><p class="text-[10px] text-gray-400">${l}</p><p class="text-xs font-bold text-gray-700">${v || '-'}</p></div></div>${v ? `<a href="${lp}${v.toString().replace('@','')}" target="_blank" class="${c} text-white px-3 py-1 rounded-lg text-[10px] font-bold shadow-sm">Open</a>` : ''}</div>`;
+            const renderRow = (l, v) => `<div class="border-b border-gray-100 py-3"><p class="text-[10px] text-gray-400 mb-0.5">${l}</p><div class="text-gray-800 font-medium text-sm post-content">${v || '-'}</div></div>`;
+            const renderPhone = (l, v) => v ? `<div class="border-b border-gray-100 py-3 flex justify-between items-center"><div><p class="text-[10px] text-gray-400 mb-0.5">${l}</p><p class="text-[#4B0082] font-bold text-sm font-mono">${v}</p></div><a href="tel:${v}" class="bg-green-500 text-white px-3 py-1.5 rounded-lg text-[10px] font-bold shadow-sm"><i class="fa fa-phone"></i> CALL</a></div>` : '';
+            const renderContact = (l, v, i, c, lp) => `<div class="border-b border-gray-100 py-3 flex justify-between items-center"><div class="flex items-center gap-3"><div class="w-8 h-8 rounded-full bg-gray-100 flex items-center justify-center text-gray-400"><i class="${i}"></i></div><div><p class="text-[10px] text-gray-400">${l}</p><p class="text-xs font-bold text-gray-700">${v || '-'}</p></div></div>${v ? `<a href="${lp}${v.toString().replace('@','')}" target="_blank" class="${c} text-white px-3 py-1 rounded-lg text-[10px] font-bold shadow-sm">Open</a>` : ''}</div>`;
 
             if(type === 'event') {
                 const i = eventsData[index]; document.getElementById('detailHeader').innerText = "Post Details";
                 const imgs = i.images.length > 0 ? i.images : [i.logo].filter(Boolean);
-                content.innerHTML = `<div class="space-y-4 slide-up">
-                    <div class="bg-white p-5 rounded-2xl shadow-sm border-b-4 border-[#D4AF37]">
-                        <h2 class="text-lg font-bold text-[#4B0082] leading-tight mb-2">${i.title}</h2>
-                        <span class="text-[9px] bg-[#D4AF37] text-white px-2 py-0.5 rounded-full uppercase inline-block">${i.cat}</span>
-                    </div>
-                    ${imgs.length > 0 ? `<div class="bg-white p-2 rounded-2xl shadow-sm"><div class="gallery-scroll">${imgs.map(img => `<div class="gallery-item"><img src="${fixDriveLink(img)}" onclick="window.open(this.src)"></div>`).join('')}</div><p class="text-[9px] text-center text-gray-400 mt-2 italic"><i class="fa fa-arrow-left mr-1"></i> Swipe to see all images <i class="fa fa-arrow-right ml-1"></i></p></div>` : ''}
-                    <div class="bg-white p-5 rounded-2xl shadow-sm">${rR('Description', i.desc)}${rR('From', i.fromDate)}${rR('To', i.toDate)}${rR('Time', i.time)}${rR('Place', i.place)}</div>
-                </div>`;
+                content.innerHTML = `<div class="space-y-4 slide-up"><div class="bg-white p-5 rounded-2xl shadow-sm border-b-4 border-[#D4AF37]"><h2 class="text-lg font-bold text-[#4B0082] leading-tight mb-2">${i.title}</h2><span class="text-[9px] bg-[#D4AF37] text-white px-2 py-0.5 rounded-full uppercase inline-block">${i.cat}</span></div>${imgs.length > 0 ? `<div class="bg-white p-2 rounded-2xl shadow-sm"><div class="gallery-scroll">${imgs.map(img => `<div class="gallery-item"><img src="${fixDriveLink(img)}" onclick="window.open(this.src)"></div>`).join('')}</div><p class="text-[9px] text-center text-gray-400 mt-2 italic"><i class="fa fa-arrow-left mr-1"></i> Swipe to see all images <i class="fa fa-arrow-right ml-1"></i></p></div>` : ''}<div class="bg-white p-5 rounded-2xl shadow-sm">${renderRow('Description', i.desc)}${renderRow('From', i.fromDate)}${renderRow('To', i.toDate)}${renderRow('Time', i.time)}${renderRow('Place', i.place)}</div></div>`;
             } else {
                 const i = dirData[index]; document.getElementById('detailHeader').innerText = i.name;
-                content.innerHTML = `<div class="space-y-4 slide-up">
-                    <div class="bg-white rounded-3xl p-5 shadow-lg border-b-4 border-[#D4AF37] text-center"><img src="${fixDriveLink(i.img)}" class="w-28 h-28 rounded-xl object-cover mx-auto mb-3 border-2 shadow-sm bg-white" onerror="this.src='CDST_Logo.png'"><h2 class="text-lg font-bold text-[#4B0082] leading-tight break-words">${i.name}</h2><div class="flex justify-center mt-1">${getStars(i.rating)}</div><a href="${REVIEW_URL}" target="_blank" class="inline-block mt-3 text-[10px] bg-gray-100 text-gray-500 px-3 py-1 rounded-full shadow-sm hover:bg-gray-200"><i class="fa fa-pen mr-1"></i> Write Review</a></div>
-                    <div class="bg-white p-5 rounded-2xl shadow-sm">${rR('Description', i.desc)}${rR('Category', i.cat)}${rR('Address', i.addr)}${rR('Ward', i.ward)}</div>
-                    <div class="bg-white p-5 rounded-2xl shadow-sm">${renderP('Phone 1', i.ph1)}${renderP('Phone 2', i.ph2)}</div>
-                    <div class="bg-white p-5 rounded-2xl shadow-sm">${rC('Viber', i.viber, 'fab fa-viber', 'bg-[#7360f2]', 'viber://chat?number=')}${rC('Telegram', i.telegram, 'fab fa-telegram', 'bg-[#229ED9]', 'https://t.me/')}</div>
-                </div>`;
+                content.innerHTML = `<div class="space-y-4 slide-up"><div class="bg-white rounded-3xl p-5 shadow-lg border-b-4 border-[#D4AF37] text-center"><img src="${fixDriveLink(i.img)}" class="w-28 h-28 rounded-xl object-cover mx-auto mb-3 border-2 shadow-sm bg-white" onerror="this.src='CDST_Logo.png'"><h2 class="text-lg font-bold text-[#4B0082] leading-tight break-words">${i.name}</h2><div class="flex justify-center mt-1">${getStars(i.rating)}</div><a href="${REVIEW_URL}" target="_blank" class="inline-block mt-3 text-[10px] bg-gray-100 text-gray-500 px-3 py-1 rounded-full shadow-sm hover:bg-gray-200"><i class="fa fa-pen mr-1"></i> Write Review</a></div><div class="bg-white p-5 rounded-2xl shadow-sm">${renderRow('Description', i.desc)}${renderRow('Category', i.cat)}${renderRow('Address', i.addr)}${renderRow('Ward', i.ward)}</div><div class="bg-white p-5 rounded-2xl shadow-sm">${renderPhone('Phone 1', i.ph1)}${renderPhone('Phone 2', i.ph2)}</div><div class="bg-white p-5 rounded-2xl shadow-sm">${renderContact('Viber', i.viber, 'fab fa-viber', 'bg-[#7360f2]', 'viber://chat?number=')}${renderContact('Telegram', i.telegram, 'fab fa-telegram', 'bg-[#229ED9]', 'https://t.me/')}</div></div>`;
             }
             modal.style.display = 'block'; document.body.style.overflow = 'hidden'; document.getElementById('bottomNav').style.transform = 'translateY(150%)';
         }
