--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         .viber-bg { background-color: #7360f2; }
         .telegram-bg { background-color: #229ED9; }
 
-        /* Blog Style Text Format */
+        /* Blog Style Formatting */
         .post-content { white-space: pre-wrap; line-height: 1.8; word-break: break-word; }
 
-        /* Full Image Gallery */
+        /* Full Contain Gallery */
         .gallery-scroll { display: flex; overflow-x: auto; gap: 12px; padding: 5px; scroll-snap-type: x mandatory; }
         .gallery-item { flex: 0 0 100%; scroll-snap-align: center; height: 300px; background: #000; border-radius: 16px; overflow: hidden; display: flex; align-items: center; justify-content: center; }
         .gallery-item img { width: 100%; height: 100%; object-fit: contain; }
@@ -98,7 +98,7 @@
         </section>
     </div>
 
-    <nav id="bottomNav" class="fixed bottom-4 left-4 right-4 bg-[#37006a] text-gray-400 flex justify-around items-center p-2 shadow-2xl z-[50] rounded-2xl border border-[#D4AF37]/50">
+    <nav id="bottomNav" class="fixed bottom-4 left-4 right-4 bg-[#37006a] text-gray-400 flex justify-around items-center p-2 shadow-2xl z-[50] rounded-2xl border border-[#D4AF37]/50 transition-transform duration-300">
         <button onclick="showPage('home')" class="nav-item flex flex-col items-center p-2 w-16 text-[#FFD700]" id="nav-home"><i class="fa fa-home text-lg mb-0.5"></i><span class="text-[9px] font-bold">Home</span></button>
         <button onclick="showPage('directory')" class="nav-item flex flex-col items-center p-2 w-16 relative" id="nav-directory"><div class="bg-[#D4AF37] text-[#37006a] w-10 h-10 rounded-full flex items-center justify-center -mt-6 shadow border-4 border-[#f8f5ff]"><i class="fa fa-search text-lg font-bold"></i></div><span class="text-[9px] font-bold mt-1">Search</span></button>
         <button onclick="showPage('contact')" class="nav-item flex flex-col items-center p-2 w-16 hover:text-gray-200" id="nav-contact"><i class="fa fa-info-circle text-lg mb-0.5"></i><span class="text-[9px] font-bold">Admin</span></button>
@@ -124,7 +124,7 @@
                 let fileId = "";
                 if (url.includes('/d/')) fileId = url.split('/d/')[1].split('/')[0];
                 else if (url.includes('id=')) fileId = url.split('id=')[1].split('&')[0];
-                if (fileId) return `https://lh3.googleusercontent.com/d/${fileId}`;
+                if (fileId) return `http://googleusercontent.com/profile/picture/8{fileId}`;
             }
             return url;
         }
@@ -149,6 +149,7 @@
         }
 
         async function loadAllData() {
+            // Restore Local Storage Caching
             const cEvents = localStorage.getItem('cache_events');
             const cDir = localStorage.getItem('cache_dir');
             const cAdmin = localStorage.getItem('cache_admin');
@@ -158,6 +159,7 @@
 
             const ns = 'cherry-directory-' + SHEET_ID.substr(0,5);
             fetch(`https://api.countapi.xyz/hit/${ns}/visits`).then(res => res.json()).then(data => { document.getElementById('viewCounter').innerText = data.value || '1.2K'; }).catch(() => { document.getElementById('viewCounter').innerText = '1.2K'; });
+
             fetchEvents(); fetchDirectory(); fetchAdmin();
         }
 
@@ -224,7 +226,7 @@
         function renderAdminBtn(lbl, val, pref, icon, cls, isFab=false, isTg=false) {
             if(!val || val === "-" || val === "") return '';
             let lnk = pref + (isTg ? val.toString().replace('@','') : val);
-            return `<a href="${lnk}" class="flex items-center justify-between ${cls} text-white p-3 rounded-xl shadow-md transition"><span class="font-bold text-xs">${lbl}: ${val}</span><i class="${isFab?'fab':'fa'} ${icon}"></i></a>`;
+            return `<a href="${lnk}" class="flex items-center justify-between ${cls} text-white p-3 rounded-xl shadow-md transition active:scale-95"><span class="font-bold text-xs">${lbl}: ${val}</span><i class="${isFab?'fab':'fa'} ${icon}"></i></a>`;
         }
 
         function setupFilters(cid, data, cb) {
@@ -248,7 +250,7 @@
             list.innerHTML = Object.keys(groups).map(cat => `
                 <div class="mb-4"><h3 class="font-bold text-[#D4AF37] text-[10px] uppercase tracking-widest mb-2 border-l-4 border-[#D4AF37] pl-2">${cat}</h3>
                 <div class="space-y-3">${groups[cat].map(i => `
-                    <div onclick="openDetail('event', ${eventsData.indexOf(i)})" class="bg-white rounded-xl shadow-sm p-3 flex gap-3 cursor-pointer active:scale-95 transition-transform"><img src="${fixDriveLink(i.images[0] || i.logo)}" class="w-20 h-20 rounded-lg object-cover bg-gray-100" onerror="this.src='CDST_Logo.png'"><div class="flex-1 flex flex-col justify-center"><h4 class="font-bold text-[#4B0082] text-sm leading-tight break-words">${i.title}</h4><p class="text-[10px] text-gray-500 mt-1 line-clamp-2">${i.desc || ''}</p></div></div>`).join('')}</div></div>`).join('');
+                    <div onclick="openDetail('event', ${eventsData.indexOf(i)})" class="bg-white rounded-xl shadow-sm p-3 flex gap-3 cursor-pointer active:scale-95 transition-transform"><img src="${fixDriveLink(i.images[0] || i.logo)}" class="w-20 h-20 rounded-lg object-cover bg-gray-100" onerror="this.src='CDST_Logo.png'"><div class="flex-1 flex flex-col justify-center"><h4 class="font-bold text-[#4B0082] text-sm leading-tight break-words">${i.title}</h4><p class="text-[10px] text-gray-500 mt-1 line-clamp-2">${i.desc || ''}</p><span class="text-[9px] text-[#D4AF37] font-bold mt-2 uppercase">View Details <i class="fa fa-arrow-right ml-1"></i></span></div></div>`).join('')}</div></div>`).join('');
         }
 
         function renderDirectory() {
@@ -267,17 +269,42 @@
 
         function openDetail(type, index) {
             const modal = document.getElementById('detailPage'); const content = document.getElementById('detailContent');
-            const renderRow = (l, v) => `<div class="border-b border-gray-100 py-3"><p class="text-[10px] text-gray-400 mb-0.5">${l}</p><div class="text-gray-800 font-medium text-sm post-content">${v || '-'}</div></div>`;
-            const renderPhone = (l, v) => v ? `<div class="border-b border-gray-100 py-3 flex justify-between items-center"><div><p class="text-[10px] text-gray-400 mb-0.5">${l}</p><p class="text-[#4B0082] font-bold text-sm font-mono">${v}</p></div><a href="tel:${v}" class="bg-green-500 text-white px-3 py-1.5 rounded-lg text-[10px] font-bold shadow-sm"><i class="fa fa-phone"></i> CALL</a></div>` : '';
-            const renderContact = (l, v, i, c, lp) => `<div class="border-b border-gray-100 py-3 flex justify-between items-center"><div class="flex items-center gap-3"><div class="w-8 h-8 rounded-full bg-gray-100 flex items-center justify-center text-gray-400"><i class="${i}"></i></div><div><p class="text-[10px] text-gray-400">${l}</p><p class="text-xs font-bold text-gray-700">${v || '-'}</p></div></div>${v ? `<a href="${lp}${v.toString().replace('@','')}" target="_blank" class="${c} text-white px-3 py-1 rounded-lg text-[10px] font-bold shadow-sm">Open</a>` : ''}</div>`;
+            
+            // Helper UI Functions
+            const renderR = (l, v) => `<div class="border-b border-gray-50 py-3"><p class="text-[10px] text-gray-400 mb-0.5 uppercase tracking-wider font-bold">${l}</p><div class="text-gray-800 font-medium text-sm post-content">${v || '-'}</div></div>`;
+            const renderP = (l, v) => v ? `<div class="border-b border-gray-50 py-3 flex justify-between items-center"><div><p class="text-[10px] text-gray-400 mb-0.5 uppercase font-bold">${l}</p><p class="text-[#4B0082] font-bold text-sm font-mono">${v}</p></div><a href="tel:${v}" class="bg-green-500 text-white px-3 py-1.5 rounded-lg text-[10px] font-bold shadow-sm active:scale-90"><i class="fa fa-phone mr-1"></i> CALL</a></div>` : '';
+            const renderC = (l, v, i, c, lp) => v ? `<div class="border-b border-gray-50 py-3 flex justify-between items-center"><div class="flex items-center gap-3"><div class="w-8 h-8 rounded-full bg-gray-100 flex items-center justify-center text-gray-400"><i class="${i}"></i></div><div><p class="text-[10px] text-gray-400 font-bold uppercase">${l}</p><p class="text-xs font-bold text-gray-700">${v}</p></div></div><a href="${lp}${v.toString().replace('@','')}" target="_blank" class="${c} text-white px-3 py-1 rounded-lg text-[10px] font-bold shadow-sm active:scale-90">CHAT</a></div>` : '';
 
             if(type === 'event') {
                 const i = eventsData[index]; document.getElementById('detailHeader').innerText = "Post Details";
                 const imgs = i.images.length > 0 ? i.images : [i.logo].filter(Boolean);
-                content.innerHTML = `<div class="space-y-4 slide-up"><div class="bg-white p-5 rounded-2xl shadow-sm border-b-4 border-[#D4AF37]"><h2 class="text-lg font-bold text-[#4B0082] leading-tight mb-2">${i.title}</h2><span class="text-[9px] bg-[#D4AF37] text-white px-2 py-0.5 rounded-full uppercase inline-block">${i.cat}</span></div>${imgs.length > 0 ? `<div class="bg-white p-2 rounded-2xl shadow-sm"><div class="gallery-scroll">${imgs.map(img => `<div class="gallery-item"><img src="${fixDriveLink(img)}" onclick="window.open(this.src)"></div>`).join('')}</div><p class="text-[9px] text-center text-gray-400 mt-2 italic"><i class="fa fa-arrow-left mr-1"></i> Swipe to see all images <i class="fa fa-arrow-right ml-1"></i></p></div>` : ''}<div class="bg-white p-5 rounded-2xl shadow-sm">${renderRow('Description', i.desc)}${renderRow('From', i.fromDate)}${renderRow('To', i.toDate)}${renderRow('Time', i.time)}${renderRow('Place', i.place)}</div></div>`;
+                content.innerHTML = `<div class="space-y-4 slide-up"><div class="bg-white p-5 rounded-2xl shadow-sm border-b-4 border-[#D4AF37]"><h2 class="text-lg font-bold text-[#4B0082] leading-tight mb-2">${i.title}</h2><span class="text-[9px] bg-[#D4AF37] text-white px-2 py-0.5 rounded-full uppercase inline-block">${i.cat}</span></div>${imgs.length > 0 ? `<div class="bg-white p-2 rounded-2xl shadow-sm"><div class="gallery-scroll">${imgs.map(img => `<div class="gallery-item"><img src="${fixDriveLink(img)}" onclick="window.open(this.src)"></div>`).join('')}</div><p class="text-[9px] text-center text-gray-400 mt-2 italic"><i class="fa fa-arrow-left mr-1"></i> Swipe for all images <i class="fa fa-arrow-right ml-1"></i></p></div>` : ''}<div class="bg-white p-5 rounded-2xl shadow-sm"><h3 class="font-bold text-[#4B0082] border-b pb-2 mb-2 text-xs uppercase tracking-widest"><i class="fa fa-info-circle mr-2 text-[#D4AF37]"></i> Information</h3>${renderR('Description', i.desc)}${renderR('From', i.fromDate)}${renderR('To', i.toDate)}${renderR('Time', i.time)}${renderR('Place', i.place)}</div></div>`;
             } else {
                 const i = dirData[index]; document.getElementById('detailHeader').innerText = i.name;
-                content.innerHTML = `<div class="space-y-4 slide-up"><div class="bg-white rounded-3xl p-5 shadow-lg border-b-4 border-[#D4AF37] text-center"><img src="${fixDriveLink(i.img)}" class="w-28 h-28 rounded-xl object-cover mx-auto mb-3 border-2 shadow-sm bg-white" onerror="this.src='CDST_Logo.png'"><h2 class="text-lg font-bold text-[#4B0082] leading-tight break-words">${i.name}</h2><div class="flex justify-center mt-1">${getStars(i.rating)}</div><a href="${REVIEW_URL}" target="_blank" class="inline-block mt-3 text-[10px] bg-gray-100 text-gray-500 px-3 py-1 rounded-full shadow-sm hover:bg-gray-200"><i class="fa fa-pen mr-1"></i> Write Review</a></div><div class="bg-white p-5 rounded-2xl shadow-sm">${renderRow('Description', i.desc)}${renderRow('Category', i.cat)}${renderRow('Address', i.addr)}${renderRow('Ward', i.ward)}</div><div class="bg-white p-5 rounded-2xl shadow-sm">${renderPhone('Phone 1', i.ph1)}${renderPhone('Phone 2', i.ph2)}</div><div class="bg-white p-5 rounded-2xl shadow-sm">${renderContact('Viber', i.viber, 'fab fa-viber', 'bg-[#7360f2]', 'viber://chat?number=')}${renderContact('Telegram', i.telegram, 'fab fa-telegram', 'bg-[#229ED9]', 'https://t.me/')}</div></div>`;
+                content.innerHTML = `
+                    <div class="space-y-4 slide-up">
+                        <div class="bg-white rounded-3xl p-5 shadow-lg border-b-4 border-[#D4AF37] text-center">
+                            <img src="${fixDriveLink(i.img)}" class="w-28 h-28 rounded-xl object-cover mx-auto mb-3 border-2 shadow-sm bg-white" onerror="this.src='CDST_Logo.png'">
+                            <h2 class="text-xl font-bold text-[#4B0082] leading-tight break-words">${i.name}</h2>
+                            <div class="flex justify-center mt-1">${getStars(i.rating)}</div>
+                            <a href="${REVIEW_URL}" target="_blank" class="inline-block mt-3 text-[10px] bg-gray-50 text-gray-500 px-4 py-1.5 rounded-full shadow-sm hover:bg-gray-100"><i class="fa fa-pen mr-1"></i> Write Review</a>
+                        </div>
+                        <div class="bg-white p-5 rounded-2xl shadow-sm">
+                            <h3 class="font-bold text-[#4B0082] border-b pb-2 mb-2 text-xs uppercase tracking-widest"><i class="fa fa-id-card mr-2 text-[#D4AF37]"></i> Basic Info</h3>
+                            ${renderR('Description', i.desc)}${renderR('Category', i.cat)}${renderR('Type', i.type)}${renderR('Address', i.addr)}${renderR('Ward', i.ward)}
+                        </div>
+                        <div class="bg-white p-5 rounded-2xl shadow-sm">
+                            <h3 class="font-bold text-[#4B0082] border-b pb-2 mb-2 text-xs uppercase tracking-widest"><i class="fa fa-phone-volume mr-2 text-[#D4AF37]"></i> Contact</h3>
+                            ${renderP('Phone 1', i.ph1)}${renderP('Phone 2', i.ph2)}
+                        </div>
+                        <div class="bg-white p-5 rounded-2xl shadow-sm">
+                            <h3 class="font-bold text-[#4B0082] border-b pb-2 mb-2 text-xs uppercase tracking-widest"><i class="fa fa-share-nodes mr-2 text-[#D4AF37]"></i> Digital Contact</h3>
+                            ${renderC('Viber', i.viber, 'fab fa-viber', 'viber-bg', 'viber://chat?number=')}
+                            ${renderC('Telegram', i.telegram, 'fab fa-telegram', 'telegram-bg', 'https://t.me/')}
+                            ${renderC('Email', i.email, 'fa fa-envelope', 'bg-red-500', 'mailto:')}
+                        </div>
+                        ${i.note ? `<div class="bg-white p-5 rounded-2xl shadow-sm border-l-4 border-yellow-400"><h3 class="font-bold text-[#4B0082] text-xs uppercase tracking-widest mb-2">Note</h3><p class="text-sm text-gray-600 post-content">${i.note}</p></div>` : ''}
+                    </div>`;
             }
             modal.style.display = 'block'; document.body.style.overflow = 'hidden'; document.getElementById('bottomNav').style.transform = 'translateY(150%)';
         }
